K8s/commands-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: commands-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  commandservice
  template:
    metadata:
      labels:
        app:  commandservice
    spec:
      containers:
        - name: commandservice
          image: kkaran1/commandservice
---

apiVersion: v1
kind: Service
metadata:
  name: commands-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
  - name: commandservice
    protocol: TCP
    port: 80          #exposed port of container
    targetPort: 8080   #the port in which application is running inside the port
