K8s/mssql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app:  mssql
    spec:
      containers:
        - name: mssql
          image:  mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort:  1433
          volumeMounts:
            - name: mssqldb
              mountPath:  /var/opt/mssql/data
      volumes:   # Corrected line
        - name: mssqldb
          persistentVolumeClaim:
            claimName:  mssql-claim
---

apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: mssql # "-" specifies an array
      protocol: TCP
      port: 1433          #exposed port of container
      targetPort: 1433   #the port in which application is running inside the port

---

#above custerip is for internal connection between services within cluster
#below is loadbalances services which is like a nodeport services that enable outside traffic to
#connect with this mssql container

apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433          #exposed port of container
      targetPort: 1433   #the port in which application is running inside the port
