K8s/rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  rabbitmq
  template:
    metadata:
      labels:
        app:  rabbitmq
    spec:
      containers:
        - name: rabbitmq-depl
          image:  rabbitmq:3-management
          ports:
            - containerPort:  15672 
              name: rbmq-mgmt-port
            - containerPort:  5672
              name: rbmq-msg-port  
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rbmq-mgmt-port # "-" specifies an array
      protocol: TCP
      port: 15672          #exposed port of container
      targetPort: 15672   #the port in which application is running inside the port
    - name: rbmq-msg-port # "-" specifies an array
      protocol: TCP
      port: 5672          #exposed port of container
      targetPort: 5672   #the port in which application is running inside the port   

---

#above custerip is for internal connection between services within cluster
#below is loadbalances services which is like a nodeport services that enable outside traffic to
#connect with this mssql container

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app:  rabbitmq
  ports:
    - name: rbmq-mgmt-port
      protocol: TCP
      port: 15672          #exposed port of container
      targetPort: 15672   #the port in which application is running inside the port
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672          #exposed port of container
      targetPort: 5672   #the port in which application is running inside the port
